Fixes/simplifying stuff